--- a/apps/templates/includes/sidenav.html
+++ b/apps/templates/includes/sidenav.html
@@ -18,7 +18,7 @@
 
 /* Sidebar collapsed */
 #sidenav-main.collapsed {
-  width: 80px;
+  width: 70px;
   transition: width 0.3s ease;
 }
 
@@ -45,16 +45,23 @@
 <nav class="sidenav navbar navbar-vertical  fixed-left  navbar-expand-xs navbar-light bg-white" id="sidenav-main">
   <div class="scrollbar-inner">
     <!-- Brand -->
-     <div style="text-align: right;">
-        <button class="sidenav-toggler" id="toggle-sidenav" style="background: none; border: none; margin: 9px;">
-      <i class="ni ni-align-left-2 text-primary"></i>
-        </button>
-    </div>
-    <!-- <div class="sidenav-header align-items-right">
-      <a class="navbar-brand" href="/">
-        <img src="/static/assets/img/brand/egasp_n.png" class="navbar-brand-img" alt="Egasp" style="height: 100%; width: auto;">
-      </a>
-    </div> -->
+        <div class="sidenav-header">
+          <!-- Flex container for toggle button and logo -->
+          <div style="display: flex; align-items: center; justify-content: space-between; width: 100%; padding: 0 10px;">
+
+            <!-- Toggle Button (Left) -->
+            <button class="sidenav-toggler" id="toggle-sidenav" style="background: none; border: none; padding-left: 15px; padding-right: 0; cursor: pointer; flex-shrink: 0;">
+              <i class="ni ni-align-left-2 text-primary" style="font-size: 1rem;"></i>
+            </button>
+                                    <!-- Logo (Center/Right) -->
+            <a class="navbar-brand" href="/" style="flex: 1; text-align: center; margin: 0; padding-left: 0;">
+              <img src="/static/assets/img/brand/egasp_n.png" class="navbar-brand-img" alt="Egasp" style="height: 60px; width: auto; max-width: 100%;">
+            </a>
+
+          </div>
+          
+        </div>
+      <hr class="my-3">
     <div class="navbar-inner">
       <!-- Collapse -->
       <div class="collapse navbar-collapse" id="sidenav-collapse-main">
@@ -106,9 +113,10 @@
           </li>            
         </ul>
         <!-- Divider -->
-        <hr class="my-3">
+            <hr class="my-3">
         <!-- Heading -->
         <h6 class="navbar-heading p-0 text-muted" id="utilities-heading">
+                 
           <span class="docs-normal">Utilities</span>
         </h6>
         <!-- Navigation -->
@@ -206,6 +214,7 @@
             </a>
             <hr class="my-3">
           </li>
+          
           <li class="nav-item">
             <a class="nav-link" 
                href="{% url 'add_breakpoints' %}">
